View Issue Details

IDProjectCategoryView StatusLast Update
0030520Open CASCADEOCCT:VISpublic2019-03-05 13:47
Reporterkgv Assigned Toapn  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version6.8.0 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030520: VIS - IVtkTools_ShapePicker::GetPickPosition() returns incorrect point
DescriptionIVtkTools_ShapePicker::Pick() methods do not update vtkAbstractPicker::PickPosition, so that always returns IVtkTools_ShapePicker::GetPickPosition() zero point.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

child of 0024904 closedbugmaster Open CASCADE Visualization - Integration of VIS component 

Activities

git

2019-02-26 08:22

administrator   ~0082349

Branch CR30520 has been created by kgv.

SHA-1: bfec8ab8ab6b08a4f7fb2ed705a2c844f10eaae9


Detailed log of new commits:

Author: kgv
Date: Tue Feb 26 08:17:19 2019 +0300

    0030520: VIS - IVtkTools_ShapePicker::GetPickPosition() returns incorrect point

kgv

2019-02-26 08:50

developer   ~0082350

Patch is ready for review.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30520-master-KGV/

git

2019-02-26 10:48

administrator   ~0082351

Branch CR30520 has been updated forcibly by kgv.

SHA-1: 98941a885a52333e9e53a7e92f295ec96e50bf0c

kgv

2019-02-27 10:13

developer   ~0082401

Please raise the patch.

apn

2019-02-27 12:55

administrator   ~0082409

Combination -
OCCT branch : CR30520
master SHA - 98941a885a52333e9e53a7e92f295ec96e50bf0c
d67d4b811012eef8913d3c535c29654d0acf3c4c
Products branch : master SHA - b4f0b00c20dec5376d841941164e1fa4249d1d84
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 16555.369999999948 / 16542.15999999996 [+0.08%]
Products
Total CPU difference: 9067.010000000033 / 9061.510000000035 [+0.06%]
Windows-64-VC14:
OCCT
Total CPU difference: 17958.90625 / 17946.09375 [+0.07%]
Products
Total CPU difference: 10479.453125 / 10439.25 [+0.39%]

Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2019-03-05 13:47

administrator   ~0082651

Branch CR30520 has been deleted by kgv.

SHA-1: 98941a885a52333e9e53a7e92f295ec96e50bf0c

Related Changesets

occt: master 1e756cb9

2019-02-26 05:17:19

kgv


Committer: apn Details Diff
0030520: VIS - IVtkTools_ShapePicker::GetPickPosition() returns incorrect point

vmoveto and ivtkmoveto commands now print topmost picked 3D point.
Affected Issues
0030520
mod - src/IVtkDraw/IVtkDraw.cxx Diff File
mod - src/IVtkDraw/IVtkDraw_Interactor.hxx Diff File
mod - src/IVtkOCC/IVtkOCC_ShapePickerAlgo.cxx Diff File
mod - src/IVtkOCC/IVtkOCC_ShapePickerAlgo.hxx Diff File
mod - src/IVtkTools/IVtkTools_ShapePicker.cxx Diff File
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2019-02-26 08:21 kgv New Issue
2019-02-26 08:21 kgv Assigned To => san
2019-02-26 08:22 git Note Added: 0082349
2019-02-26 08:24 kgv Relationship added child of 0024904
2019-02-26 08:25 kgv Product Version 7.3.0 => 6.8.0
2019-02-26 08:50 kgv Note Added: 0082350
2019-02-26 08:50 kgv Status new => resolved
2019-02-26 10:48 git Note Added: 0082351
2019-02-27 10:13 kgv Note Added: 0082401
2019-02-27 10:13 kgv Assigned To san => bugmaster
2019-02-27 10:13 kgv Severity minor => trivial
2019-02-27 10:13 kgv Status resolved => reviewed
2019-02-27 12:55 apn Test case number => Not needed
2019-02-27 12:55 apn Note Added: 0082409
2019-02-27 12:55 apn Status reviewed => tested
2019-03-03 21:12 apn Changeset attached => occt master 1e756cb9
2019-03-03 21:12 apn Assigned To bugmaster => apn
2019-03-03 21:12 apn Status tested => verified
2019-03-03 21:12 apn Resolution open => fixed
2019-03-05 13:47 git Note Added: 0082651