0030520: VIS - IVtkTools_ShapePicker::GetPickPosition() returns incorrect point

vmoveto and ivtkmoveto commands now print topmost picked 3D point.